# Ultramotiv_assignment

./: README.md
install/: local_setup.sh  setup.sh
install/cobot2_new/share/ament_index/resource_index/package_run_dependencies/: cobot2_new
install/cobot2_new/share/ament_index/resource_index/parent_prefix_path/: cobot2_new
install/cobot2_new/share/cobot2_new/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cobot2_new/share/cobot2_new/cmake/: cobot2_newConfig-version.cmake  cobot2_newConfig.cmake
install/cobot2_new/share/cobot2_new/config/: cobot_trial2.ros2_control.xacro  cobot_trial2.srdf  cobot_trial2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
install/cobot2_new/share/cobot2_new/environment/: ament_prefix_path.dsv  path.dsv
install/cobot2_new/share/cobot2_new/launch/: demo.launch.py  final.launch.py  gazebo.launch.py  gazebo_simulation.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  temp.launch.py  warehouse_db.launch.py
install/cobot_trial2_description/lib/cobot_trial2_description/: fk_node  ik_node  yolo_object_detection_node.py
install/cobot_trial2_description/local/lib/python3.10/dist-packages/cobot_trial2_description-0.0.1-py3.10.egg-info/: SOURCES.txt
install/cobot_trial2_description/share/ament_index/resource_index/package_run_dependencies/: cobot_trial2_description
install/cobot_trial2_description/share/ament_index/resource_index/parent_prefix_path/: cobot_trial2_description
install/cobot_trial2_description/share/cobot_trial2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cobot_trial2_description/share/cobot_trial2_description/cmake/: cobot_trial2_descriptionConfig-version.cmake  cobot_trial2_descriptionConfig.cmake
install/cobot_trial2_description/share/cobot_trial2_description/config/: display.rviz  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  planning_pipeline_config.yaml  ros2_controllers.yaml  sensors_3d.yaml
install/cobot_trial2_description/share/cobot_trial2_description/environment/: ament_prefix_path.dsv  path.dsv
install/cobot_trial2_description/share/cobot_trial2_description/launch/: display.launch.py  gazebo.launch.py  gazebo_simulation.launch.py  launch_all.launch.py  moveit_gazebo_simulation.launch.py  moveit_rviz.launch.py
install/cobot_trial2_description/share/cobot_trial2_description/meshes/: base_link.stl  base_motor_v1_1.stl  link1_motor_v1_1.stl  link1_v1_1.stl  link2_motor_v1_1.stl  link2_v1_1.stl  link3_motor_v1_1.stl  link3_v1_1.stl  link4_motor_v1_1.stl  link4_v1_1.stl  link5_v1_1.stl
install/cobot_trial2_description/share/cobot_trial2_description/urdf/: camera.xacro  cobot_trial2.gazebo  cobot_trial2.srdf  cobot_trial2.trans  cobot_trial2.urdf  cobot_trial2.xacro  materials.xacro
log/: latest_build
src/: README.md
src/cobot2_new/: .setup_assistant  CMakeLists.txt
src/cobot2_new/config/: cobot_trial2.ros2_control.xacro  cobot_trial2.srdf  joint_limits.yaml
src/cobot2_new/launch/: final.launch.py  gazebo_simulation.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py  temp.launch.py
src/cobot_trial2_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/cobot_trial2_description/config/: moveit_controllers.yaml  ros2_controllers.yaml
src/cobot_trial2_description/launch/: gazebo_simulation.launch.py  moveit_gazebo_simulation.launch.py
src/cobot_trial2_description/meshes/: base_link.stl  base_motor_v1_1.stl  link1_motor_v1_1.stl  link4_motor_v1_1.stl  link5_v1_1.stl
src/cobot_trial2_description/scripts/: yolo_object_detection_node.py
src/cobot_trial2_description/src/: fk_node.cpp  ik_node.cpp
src/cobot_trial2_description/urdf/: camera.xacro  cobot_trial2.gazebo  cobot_trial2.srdf  cobot_trial2.urdf
